services/fd-tagging-tool/src/test/resources/valid/SmartHomeProject/SmartSpeaker.mt
package valid.SmartHomeProject;

component SmartSpeaker {
    AudioChip audioChip;
}