services/fd-tagging-tool/src/test/resources/invalid/TwoSameTags/TwoSameTags.mt
package invalid.TwoSameTags;

component TwoSameTags {
  Source source;
  Sink sink;

  source.value -> sink.value;
}